--- a/style/index.css
+++ b/style/index.css
@@ -1,10 +1,13 @@
-h1 {
+h1,
+#methodologyTitle {
   text-align: center;
   font-family: Roboto;
   font-weight: bold;
   font-size: 33px;
-  width: 100%;
   margin: 1% !important;
+}
+html{
+  width: 100%;
 }
 
 .info {
@@ -47,7 +50,12 @@ div.tooltip {
 }
 
 #container {
+  width: 100%;
   padding: 20px;
+}
+
+.map{
+  background-color: rgba(142, 193, 252, 0.151);
 }
 
 #infoContainer {
@@ -74,22 +82,58 @@ li {
   display: inline-block;
 }
 
-#colMap {
+.colMap {
   width: 50%;
 }
 
 .btnReset {
-  display: inline;
+  width: 180px;
+}
+
+#zupanija {
+  margin-left: 85px;
+}
+
+#divBack {
+  color: white;
+  height: 20px;
+  text-align: center;
+  width: 180px !important;
 }
 
 .dropdown {
   display: inline-block;
-  margin: 10px;
+  margin-left: 10px;
+  margin-top: 5px;
+}
+
+.dropdown-toggle {
+  width: 180px;
+}
+
+#btnAnimation {
+  width: 180px;
 }
 
 #currentMigration {
   text-align: center;
   margin: 20px;
+}
+
+#zupanija {
+  text-align: center;
+  font-family: Roboto;
+  font-size: 33px;
+  margin: 1% !important;
+}
+
+#graphTitle {
+  width: 100%;
+  text-align: center;
+  margin: 50px 0 20px 0;
+}
+.dropdown-toggle {
+  width: 180px;
 }
 
 .dropdown-toggle:hover {
@@ -113,81 +157,130 @@ li {
 }
 
 .dropdown-menu {
-  margin: 1px !important;
+  position: center;
+  width: 180px;
+  margin-top: 0px !important;
 }
 
-/* Container for flexboxes */
 .row {
   display: flex;
-  width: 100%;
-  flex-wrap: wrap;
 }
 
-/* Create three equal columns */
 .column {
   flex: 33.33%;
   padding: 20px;
+  justify-content: space-between;
 }
 
-/* On screens that are 992px wide or less, go from three columns to two columns */
-@media screen and (max-width: 850px) {
+.grid line {
+  stroke: lightgrey;
+  stroke-opacity: 0.5;
+  shape-rendering: crispEdges;
+}
+
+.grid path {
+  stroke-width: 0;
+}
+
+#aboutGraph {
+  margin-top: 20px;
+  width: 100%;
+}
+
+p {
+  padding: 15px 15px 0 15px;
+}
+
+g {
+  font-size: max(1.6vh, 16px);
+}
+
+/* On screens that are 992px wide or less, go from four columns to two columns */
+@media screen and (max-width: 1100px) {
   .column {
-    flex: 90%;
-  }
-  #colMap {
-    max-width: 100%;
+    flex: 100% !important;
   }
   .info {
     margin-bottom: 0px;
   }
 
-  .dropdown {
-    margin-bottom: 20px;
-    margin-left: 30%;
-    width: 40%;
-    /* Firefox */
-    display: -moz-box;
-    -moz-box-pack: center;
-    -moz-box-align: center;
-    /* Safari and Chrome */
-    display: -webkit-box;
-    -webkit-box-pack: center;
-    -webkit-box-align: center;
-    /* W3C */
-    display: box;
-    box-pack: center;
-    box-align: center;
+  #colMap {
+    width: 100% !important;
   }
 }
 
 /* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 900px) {
-
+@media screen and (max-width: 1100px) {
   .row {
     flex-direction: column;
     align-items: center;
   }
+  .column {
+    width: 100%;
+  }
+
+  #aboutGraph {
+    margin: 0 auto;
+    width: 80%;
+  }
 
   #colMap {
-    width: 90%;
+    width: 100%;
+  }
+
+  #zupanija {
+    margin: 30px 0 30px 0 !important;
+  }
+
+  #divBack {
+    width: 180px !important;
+    display: block;
+    margin: 0 0 20px 0;
+  }
+
+  .dropdown-toggle {
+    width: 180px !important;
   }
 
   .dropdown {
-    margin-bottom: 20px;
-    margin-left: 30%;
-    width: 40%;
-    /* Firefox */
-    display: -moz-box;
-    -moz-box-pack: center;
-    -moz-box-align: center;
-    /* Safari and Chrome */
-    display: -webkit-box;
-    -webkit-box-pack: center;
-    -webkit-box-align: center;
-    /* W3C */
-    display: box;
-    box-pack: center;
-    box-align: center;
+    position: center;
+  }
+
+  .dropdown-menu {
+    position: center;
+    width: 180px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  #divBack {
+    width: 180px !important;
+  }
+
+  #btnReset{
+    height: 40px !important;
+  }
+
+  .dropdown {
+    position: center;
+  }
+
+  .dropdown-menu {
+    position: center;
+    margin-bottom: 0px !important;
+    width: 180px;
+  }
+  .dropdown-toggle {
+    height: 40px !important;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  li{
+    width: 100% !important;
+  }
+  .legenda{
+    width: 100% !important;
   }
 }
 
@@ -204,8 +297,19 @@ div.tooltip {
   pointer-events: none;
 }
 
+.zoom {
+  cursor: move;
+  fill: none;
+  pointer-events: all;
+}
+
 footer {
   text-align: center;
   font-style: Roboto;
   font-size: 16px;
+  text-align: center;
+   width: 100%;
+}
+p {
+  font-family: Roboto;
 }
