--- a/style/info.css
+++ b/style/info.css
@@ -47,6 +47,7 @@ div.tooltip {
 }
 
 #container {
+  width: 100%;
   padding: 20px;
 }
 
@@ -89,14 +90,14 @@ li {
 #divBack {
   color: white;
   height: 20px;
-  float: right;
-  margin-top: 30px;
-  margin-right: 40px;
+  text-align: center;
+  width: 180px !important;
 }
 
 .dropdown {
   display: inline-block;
   margin-left: 10px;
+  margin-top: 5px;
 }
 
 #btnAnimation {
@@ -120,6 +121,9 @@ li {
   text-align: center;
   margin: 50px 0 20px 0;
 }
+.dropdown-toggle {
+  width: 180px;
+}
 
 .dropdown-toggle:hover {
   background-color: rgba(45, 156, 190, 0.582) !important;
@@ -142,20 +146,18 @@ li {
 }
 
 .dropdown-menu {
-  margin: 1px !important;
+  position: center;
+  width: 180px;
 }
 
-/* Container for flexboxes */
 .row {
   display: flex;
-  flex-wrap: wrap;
-  width: 100%;
 }
 
-/* Create four equal columns */
 .column {
   flex: 33.33%;
   padding: 20px;
+  justify-content: space-between;
 }
 
 .grid line {
@@ -169,12 +171,13 @@ li {
 }
 
 #aboutGraph {
-  margin-top: 70px;
+  margin-top: 20px;
   width: 100%;
 }
 
 p {
   padding: 15px 15px 0 15px;
+  font-size: 19px !important;
 }
 
 g {
@@ -182,20 +185,27 @@ g {
 }
 
 /* On screens that are 992px wide or less, go from four columns to two columns */
-@media screen and (max-width: 1050px) {
+@media screen and (max-width: 1100px) {
   .column {
-    flex: 80%;
+    flex: 100% !important;
   }
   .info {
     margin-bottom: 0px;
   }
+
+  #colMap {
+    width: 100% !important;
+  }
 }
 
 /* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1100px) {
   .row {
     flex-direction: column;
     align-items: center;
+  }
+  .column {
+    width: 100%;
   }
 
   #aboutGraph {
@@ -204,7 +214,7 @@ g {
   }
 
   #colMap {
-    width: 90%;
+    width: 100%;
   }
 
   #zupanija {
@@ -212,30 +222,42 @@ g {
   }
 
   #divBack {
-    height: fit-content;
-    float: none;
-    margin-top: 20px;
-    margin-left: 40%;
+    width: 180px !important;
+    display: block;
+    margin: 0 0 20px 0;
   }
+  
+  .dropdown-toggle {
+    width: 180px !important;
+  }
+
   .dropdown {
-    right: auto !important;
-    text-align: center !important;
-    margin: 0 auto;
+    position: center;
   }
 
   .dropdown-menu {
-    margin: 0 !important;
+    position: center;
+    width: 180px;
   }
 }
 
 @media screen and (max-width: 500px) {
   #divBack {
-    margin-left: 33%;
+    width: 180px !important;
   }
 
   .dropdown {
-    margin: 0 auto 20px auto !important;
-    width: 100%;
+    position: center;
+  }
+
+  .dropdown-menu {
+    position: center;
+    margin-bottom: 0px !important;
+    width: 180px;
+  }
+  .dropdown-toggle{
+    height: fit-content;
+    margin-bottom: 10px !important;
   }
 }
 
