--- a/style/info.css
+++ b/style/info.css
@@ -178,6 +178,8 @@ li {
 p {
   padding: 15px 15px 0 15px;
   font-size: 19px !important;
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 g {
